--- a/1-Python-Basics/1.3-Operators.ipynb
+++ b/1-Python-Basics/1.3-Operators.ipynb
@@ -239,6 +239,122 @@
     "a = True\n",
     "print(not a)  # False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e73cb6a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are eligible to vote.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python Conditions and If statements\n",
+    "age = 20\n",
+    "if age >= 18:\n",
+    "    print(\"You are eligible to vote.\")\n",
+    "else:\n",
+    "    print(\"You are not eligible to vote.\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "62c7136d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an adult.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#elif\n",
+    "#The elif keyword is Python's way of saying \"if the previous conditions were not true, then try this condition\".\n",
+    "age = 20\n",
+    "if age < 13:\n",
+    "    print(\"You are a child.\")   \n",
+    "elif age < 20:\n",
+    "    print(\"You are a teenager.\")\n",
+    "elif age < 65:\n",
+    "    print(\"You are an adult.\")\n",
+    "else:\n",
+    "    print(\"You are a senior citizen.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "753c1355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are eligible to vote.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested conditional statements\n",
+    "age = 20    \n",
+    "if age >= 18:\n",
+    "    print(\"You are eligible to vote.\")\n",
+    "    if age >= 21:\n",
+    "        print(\"You can also drink alcohol.\")\n",
+    "else:\n",
+    "    print(\"You are not eligible to vote.\")\n",
+    "    if age < 16:\n",
+    "        print(\"You are too young to drive.\")  \n",
+    "    else:\n",
+    "        print(\"You can apply for a driving license.\")       \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f0929104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020 is a leap year.\n",
+      "The number is zero.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: determine if a year is a leap year\n",
+    "year = 2020\n",
+    "if (year % 4 == 0 and year % 100 != 0) or (year % 400 == 0):\n",
+    "    print(f\"{year} is a leap year.\")        \n",
+    "else:\n",
+    "    print(f\"{year} is not a leap year.\")\n",
+    "\n",
+    "# Example: check if a number is positive, negative, or zero\n",
+    "number = 0\n",
+    "if number > 0:\n",
+    "    print(\"The number is positive.\")    \n",
+    "elif number < 0:\n",
+    "    print(\"The number is negative.\")    \n",
+    "else:\n",
+    "    print(\"The number is zero.\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
